--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <h2 style="display: flex;margin: 0px auto; text-align: center; padding-left: 350px;padding-top: 20px;font-size: 2.6rem;background: rgba(0,0,0,0.6);color: white;">CHATRAPATI SHIVAJI MAHARAJ'S FORT</h2>
                 <div class="info">
                     
-                        <h1>1. TORAN FORT</h1>
+                        <h1>1. TORNA FORT</h1>
                         <p>The first feather on his royal crown, Torna was Shivaji’s premiere conquest at the young age of 16. 
                             Having rechristened it to Prachandgad, Shivaji Maharaj constructed monuments on its massive spread.</p>
                 </div>
